--- a/ball/style.css
+++ b/ball/style.css
@@ -25,7 +25,7 @@ body {
   width: 5%;
   height: auto;
 
-  transition: linear .5s;
+  transition: .2s;
 }
 
 .ballJump{
@@ -35,8 +35,5 @@ body {
   top: 60%;
   left: 50%;
 
-  width: 5%;
-  height: auto;
-
-  transition: linear .2s;
+  transition: linear .1s;
 }
